Solved bug with gapPercentage

--- a/moockup.css
+++ b/moockup.css
@@ -83,7 +83,7 @@
 
 .moockup > .header > .menu > .item.selected,
 .moockup > .header > .menu > .item:hover {
-	border-bottom: solid #fff 1px;
+	border-bottom: solid #000 1px;
 }
 
 .moockup.darkBackground > .header > .menu > .item.selected,
